# hw-mqtt-srv

./: .dockerenv.example  .dockerignore  .env.example  DOCKER_README.md  Dockerfile  PRODUCTION_DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  mosquitto.conf  pyproject.toml
.github/workflows/: docker.yml
examples/: simple_client.py
src/: __init__.py  config.py  main.py
src/ai_services/: __init__.py  base.py  openai_realtime.py
src/mqtt/: __init__.py  client.py  messages.py
tests/: simple_client.py
